config/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: opa-example-app
  name: opa-example-app
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: opa-example-app
  type: ClusterIP
