config/k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: opa-example-app
  name: opa-example-app
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: opa-example-app
    weight: 100
  wildcardPolicy: None
